@@ -21,7 +21,7 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #  pragma implementation
 #endif
 
-#ifndef WIN32
+#ifdef XWIN
 
 #include "forked_player.h"
 
@@ -93,5 +93,4 @@ const	char *forked_player::copyright(void)
 	return "Internal cheapass forked midi player";
 }
 
-
-#endif
+#endif // XWIN
